Corrigiendo error en ProductoService